--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'me.yirf'
-version = '0.1'
+version = '1.0'
 
 repositories {
     mavenCentral()
@@ -22,7 +23,8 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT")
-    compileOnly 'me.clip:placeholderapi:2.11.6'
+    compileOnly("me.clip:placeholderapi:2.11.6")
+    compileOnly("com.mojang:brigadier:1.0.18")
 }
 
 def targetJavaVersion = 17
